<resources>
    <string name="app_name">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name">Nour Mihai-Cosmin</string>
    <string name="user_email">mihaicosmin2003@gmail.com</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="name">Name</string>
    <string name="destination">Destination</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="trip_type">Trip type:</string>
    <string name="save">Save</string>
    <string name="type">Type:</string>
    <string name="price">Price(€):</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="image_url">Image Url</string>
    <string name="travel_journal">Travel Journal</string>

    <string name="destination_text">In %1$s</string>
    <string name="price_text">Price: %1$s €</string>
</resources>