<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TripHandleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTripDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTripName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroupTripType"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupTripType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroupTripType" />

        <RadioGroup
            android:id="@+id/radioGroupTripType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTripDestination">

            <RadioButton
                android:id="@+id/radioButtonType1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_break" />

            <RadioButton
                android:id="@+id/radioButtonType2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sea_side" />

            <RadioButton
                android:id="@+id/radioButtonType3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountains" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/sliderTripPrice"
            app:layout_constraintEnd_toStartOf="@+id/sliderTripPrice"
            app:layout_constraintTop_toTopOf="@+id/sliderTripPrice" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderTripPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="8dp"
            android:valueFrom="0"
            android:valueTo="3000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTripType" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/from"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/datePickerEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderTripPrice" />

        <DatePicker
            android:id="@+id/datePickerStart"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:spinnersShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/to"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/datePickerStart"
            app:layout_constraintTop_toBottomOf="@+id/sliderTripPrice" />

        <DatePicker
            android:id="@+id/datePickerEnd"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:spinnersShown="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/datePickerStart"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <RatingBar
            android:id="@+id/ratingBarTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerStart" />

        <EditText
            android:id="@+id/editTextTripImageUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:ems="10"
            android:inputType="textUri"
            android:hint="@string/image_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarTrip" />

        <Button
            android:id="@+id/buttonSaveTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTripImageUrl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>